# ssix

./: .gitignore  AGENTS.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: e2e.yml  release.yml  test.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  back.md  development.md  features.md  file-transfer.md  front.md  git-sync.md  troubleshooting.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/docker/: Dockerfile  entrypoint.sh
e2e/helpers/: app.ts  backend-logs.ts  data-dir.ts  docker.ts  flows.ts  selectors.ts
e2e/specs/: 01-credentials-crud.spec.ts  02-connections-crud.spec.ts  03-direct-session.spec.ts  04-jumpshell.spec.ts  05-port-forward.spec.ts  06-scp.spec.ts  07-keygen-install.spec.ts  08-git-sync.spec.ts  09-tag-groups.spec.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  logs.rs  main.rs  models.rs  ssh.rs  storage.rs
src-tauri/src/commands/: connections.rs  credentials.rs  git_sync.rs  mod.rs  scp.rs  screenshot.rs  settings.rs  ssh.rs  ssh_keygen.rs
src/components/: BulkScpDialog.tsx  ConfirmDialog.tsx  ConnectPicker.tsx  ConnectionForm.tsx  ConnectionList.tsx  ContextMenu.tsx  CredentialForm.tsx  CredentialList.tsx  FailedTerminal.tsx  GenerateKeyDialog.tsx  GitSyncView.tsx  InstallKeyDialog.tsx  LogsView.tsx  ScpDialog.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  TagGroupGrid.tsx  Terminal.tsx  TerminalTabs.tsx  TitleBar.tsx  TunnelTab.tsx  TunnelsView.tsx
src/hooks/: useApplySettings.ts  useGlobalShortcuts.ts  useRovingFocus.ts  useUnsavedChangesGuard.ts
src/lib/: asyncAction.ts  bulk-actions.ts  colors.ts  dialog.ts  events.ts  log.ts  port.ts  screenshot.ts  ssh-command.ts  tags.ts  tauri.ts
src/store/: useConnectionsStore.ts  useCredentialsStore.ts  useDialogsStore.ts  useGitSyncStore.ts  useSettingsStore.ts  useTerminalsStore.ts  useTunnelsStore.ts  useViewStore.ts
src/styles/: globals.css
src/test/: AppFormMounting.test.ts  ConfirmDialog.test.tsx  ConnectPicker.test.tsx  ConnectionFormColorPicker.test.tsx  ConnectionFormErrorA11y.test.tsx  ConnectionFormPortValidation.test.tsx  ConnectionFormVerbosityCopy.test.tsx  ConnectionList.test.tsx  ConnectionListContextMenu.test.tsx  ContextMenu.test.tsx  CredentialFormBrowse.test.tsx  CredentialFormSshKey.test.tsx  CredentialList.test.tsx  DialogAriaDescribedBy.test.tsx  EmptyState.test.tsx  ExtraArgs.test.tsx  FailedTerminal.test.tsx  FormStickyFooter.test.tsx  GenerateKeyDialog.test.tsx  GitSyncView.test.tsx  InlineCredentialNaming.test.tsx  InstallKeyDialog.test.tsx  LayoutToggle.test.tsx  LoginCommandRemotePath.test.tsx  LogsView.test.tsx  PasswordInput.test.tsx  RequiredFieldErrors.test.tsx  RovingFocus.test.tsx  ScpDialog.test.tsx  (+26 more)
(+20 files in other folders)
