[package]
name = "ssx"
version = "0.1.0"
description = "SSX SSH Client"
authors = []
edition = "2021"

[lib]
name = "ssx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dirs-next = "2"
ssh2 = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "alloc", "encryption"] }
rand_core = { version = "0.6", features = ["getrandom"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
once_cell = "1"
tauri-plugin-dialog = "2.7.0"



[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
